--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
+    {% include'navbar/navbar.html.twig' %}
     <body>
         {% block body %}{% endblock %}
     </body>
